--- a/kraft/build.gradle
+++ b/kraft/build.gradle
@@ -1,8 +1,7 @@
 apply plugin: 'com.android.library'
-
 apply plugin: 'kotlin-android'
 
-apply plugin: 'kotlin-android-extensions'
+apply from: rootProject.file("gradle/jacoco.gradle")
 
 android {
     compileSdkVersion 29
@@ -12,7 +11,6 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
         release {
@@ -22,16 +20,12 @@ android {
     }
 }
 
-ext {
-    retrofit_version = "2.6.0"
-    okhttp_version = "3.12.0"
-}
-
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-    implementation 'com.google.code.gson:gson:2.8.6'
+    compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compileOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+    compileOnly "com.google.code.gson:gson:2.8.6"
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.5.2'
+    testImplementation "com.google.code.gson:gson:2.8.6"
+    testImplementation "org.junit.jupiter:junit-jupiter:5.5.2"
+    testImplementation "io.mockk:mockk:1.9.3"
 }
