--- a/kraft/build.gradle
+++ b/kraft/build.gradle
@@ -1,24 +1,9 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+apply plugin: 'kotlin'
 
 apply from: rootProject.file("gradle/jacoco.gradle")
 
-android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.2"
-    defaultConfig {
-        minSdkVersion 21
-        targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
-    }
-}
+group = "com.livefront.kraft"
+version = "0.1.0"
 
 dependencies {
     compileOnly "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -28,4 +13,25 @@ dependencies {
     testImplementation "com.google.code.gson:gson:2.8.6"
     testImplementation "org.junit.jupiter:junit-jupiter:5.5.2"
     testImplementation "io.mockk:mockk:1.9.3"
+}
+
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8
+    targetCompatibility = JavaVersion.VERSION_1_8
+}
+
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8
+    }
+}
+
+test {
+    useJUnitPlatform()
 }
