--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,8 @@
 language: java
 dist: trusty
-rvm:
-  - 2.7.2
 install:
+  - rvm install "ruby-2.7.2"
+  - rvm use "ruby-2.7.2"
   - bundle install
 script:
   - ./gradlew check jacocoTestReport
