Convert to GitHub Actions

--- a/gradle/jacoco.gradle
+++ b/gradle/jacoco.gradle
@@ -9,9 +9,10 @@ jacocoTestReport {
 }
 
 jacoco {
-    toolVersion = "0.8.5"
+    toolVersion = "0.8.7"
 }
 
 test {
+    jacoco.excludes = ['jdk.internal.*']
     jacoco.includeNoLocationClasses = true
 }
